# Nexusflow

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README-ZH.md  README.md  TODO.md
app/: CMakeLists.txt  main.cpp
benchmarks/: BenchmarkMessage.cpp  CMakeLists.txt  README.md  benchmark_main.cpp
benchmarks/pipeline/: CMakeLists.txt  README.md  main.cpp
cmake/: Summary.cmake  Utils.cmake  include.cmake  spdlog.cmake  yaml-cpp.cmake
config/: mock-graph.yaml
examples/: CMakeLists.txt  main.cpp
examples/1-how-to-use/: CMakeLists.txt  config.yaml  main.cpp
examples/1-how-to-use/my_module/: MockInputModule.cpp  MockInputModule.hpp  MockOutputModule.cpp  MockOutputModule.hpp  MockProcessModule.cpp  MockProcessModule.hpp
examples/2-linear-vision-pipline/: CMakeLists.txt  config.yaml  main.cpp
examples/2-linear-vision-pipline/module/: MyAlarmPusherModule.cpp  MyAlarmPusherModule.hpp  MyBehaviorAnalyzerModule.cpp  MyBehaviorAnalyzerModule.hpp  MyDecoderModule.cpp  MyDecoderModule.hpp  MyPersonDetectorModule.cpp  MyPersonDetectorModule.hpp  MyStreamPullerModule.cpp  MyStreamPullerModule.hpp
examples/3-joined-vision-pipline/: CMakeLists.txt  README.md  config.yaml  main.cpp
examples/3-joined-vision-pipline/module/: MyMessage.hpp  module.hpp
examples/3-joined-vision-pipline/module/alarm/: MyAlarmPusherModule.cpp  MyAlarmPusherModule.hpp
examples/3-joined-vision-pipline/module/decoder/: MyDecoderModule.cpp  MyDecoderModule.hpp
examples/3-joined-vision-pipline/module/process/: MyBehaviorAnalyzerModule.cpp  MyBehaviorAnalyzerModule.hpp  MyHeadDetectorModule.cpp  MyHeadDetectorModule.hpp  MyHeadPersonFusionModule.cpp  MyHeadPersonFusionModule.hpp  MyPersonDetectorModule.cpp
examples/3-joined-vision-pipline/module/puller/: MyStreamPullerModule.cpp  MyStreamPullerModule.hpp
examples/how-to-use/: CMakeLists.txt  config.yaml
examples/how-to-use/my_module/: MockInputModule.cpp  MockInputModule.hpp  MockOutputModule.cpp  MockOutputModule.hpp  MockProcessModule.cpp  MockProcessModule.hpp
examples/linear-vision-pipline/: CMakeLists.txt  config.yaml
examples/linear-vision-pipline/module/: MyAlarmPusherModule.cpp  MyAlarmPusherModule.hpp  MyBehaviorAnalyzerModule.cpp  MyBehaviorAnalyzerModule.hpp  MyDecoderModule.cpp  MyDecoderModule.hpp  MyPersonDetectorModule.cpp  MyPersonDetectorModule.hpp  MyStreamPullerModule.cpp  MyStreamPullerModule.hpp
examples/my_module/: MockInputModule.cpp  MockInputModule.hpp  MockOutputModule.cpp  MockOutputModule.hpp  MockProcessModule.cpp  MockProcessModule.hpp  MyMessage.hpp
include/nexusflow/: Any.hpp  Config.hpp  Define.hpp  ErrorCode.hpp  Logging.hpp  Message.hpp  Module.hpp  ModuleFactory.hpp  Nexusflow.hpp  Pipeline.hpp  PipelineBuilder.hpp  ProcessingContext.hpp  TypeTraits.hpp  Variant.hpp
src/: CMakeLists.txt  main.cpp
src/Graph/: Graph.cpp  Graph.h
src/base/: Define.hpp  Graph.cpp  Graph.hpp  GraphUtils.cpp  GraphUtils.hpp
src/base/test/: GraphTest.cpp
src/builder/: PipelineBuilder.cpp
src/common/: ConcurrentQueue.hpp  Optional.hpp  ViewPtr.hpp
src/common/test/: OptionalTest.cpp
src/core/: Worker.cpp  Worker.hpp
src/dispatcher/: Dispatcher.cpp  Dispatcher.hpp
src/helper/: logging.hpp
src/module/: ActorContext.hpp  Module.cpp  ModuleActor.cpp  ModuleActor.hpp  ModuleFactory.cpp  ProcessingContext.cpp
src/monitoring/: Metrics.hpp  MetricsRegistry.hpp  Monitoring.hpp
src/pipeline/: ErrorCode.hpp  Pipeline.cpp
src/pipeline/base/: ConcurrentQueue.hpp  Graph.cpp  Graph.hpp  GraphTest.cpp  Message.hpp  OptionalTest.cpp
src/pipeline/core/: ModuleBase.cpp  ModuleBase.hpp  Pipeline.cpp  Pipeline.hpp  PipelineManager.cpp  PipelineManager.hpp
src/pipeline/impl/: PipelineImpl.cpp  PipelineImpl.hpp
src/pipeline/modules/: ModuleFactory.cpp  ModuleFactory.hpp
src/pipeline/modules/mock/: MockInputModule.cpp  MockInputModule.hpp  MockOutputModule.cpp  MockOutputModule.hpp  MockProcessModule.cpp  MockProcessModule.hpp
src/pipeline/run/: GraphUtils.cpp  GraphUtils.hpp  PipelineManager.cpp  PipelineManager.hpp
src/profiling/: Primitives.hpp  ProfilerRegistry.hpp
src/utils/: logging.hpp
tests/: CMakeLists.txt  gtest_main.cpp
tests/test/: MessageTest.cpp
