cmake_minimum_required(VERSION 3.15 FATAL_ERROR)

project(DAG-Base VERSION 1.0.0 LANGUAGES CXX)



set(CMAKE_CXX_STANDARD 14)
# set(CMAKE_CXX_STANDARD_REQUIRED ON)
# set(CMAKE_CXX_EXTENSIONS ON)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)



set(PROJECT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
set(INSTALL_ROOT ${PROJECT_ROOT}/install)

#list(APPEND CMAKE_CXX_FLAGS "-Wl,--no-as-needed")

#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

### Find Deps
#find_package(spdlog REQUIRED)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
# include(spdlog)
# include(yaml-cpp)
# include(gtest)

if(CMAKE_INSTALL_PREFIX STREQUAL "" OR CMAKE_INSTALL_PREFIX STREQUAL "/usr/local")
  set(CMAKE_INSTALL_PREFIX ${INSTALL_ROOT})
endif()


if(NOT DEFINED CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Release")
endif()

include("cmake/Summary.cmake")

add_subdirectory(src)
